# lecture_scanner

./: .gitignore  README.md  display_content_bb.py  main.py  pyproject.toml  tf_idf.py
weights/: implementing_trees.json
