[tool.poetry]
name = "lecture_scanner"
version = "0.1.0"
description = ""
authors = ["jadenPete <jadenpete@github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0.66"
nltk = "^3.7"
beautifulsoup4 = "^4.11.1"
scikit-learn = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
